# lazy-top

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  tui.rs  ui.rs
